# C-Geometry

./: .gitignore  Point-Distributions.code-workspace  README.md  cGeometry.h  cgeo_core.hpp  workspace.code-workspace
CGeometry/: core.hpp  projective.hpp
CGeometry/core/: cloud.hpp  coordinate_space.hpp  hmath.hpp  point_set.hpp  transforms.hpp  units.hpp
CGeometry/projective/: pinhole.hpp
Fibonnaci_Spheres/: CMakeLists.txt  source.cpp
cgeo/: cloud.hpp  core.hpp  dynamics.hpp  hmath.hpp  mesh.hpp  polyhedra.hpp  transforms.hpp  units.hpp
examples/stargate_star_address/: CMakeLists.txt  source.cpp  stargate.hpp
